<resources>
    <string name="app_name">Gps Icon</string>
    <string name="notif_search_status">search</string>
    <string name="notif_search_found">found</string>
    <string name="notif_fix_status">fix</string>
    <string name="notif_fix_used">used</string>
    <string name="notify_icon_type_header">indicator type</string>
    <string name="notify_icon_type_blink">blink indicator</string>
    <string name="notify_icon_type_bu">digital indicator</string>
    <string name="notify_message_template">GPS (%s)</string>
    <string name="show_gps_location_state">show gps location state</string>
    <string name="show_network_location_state">show network location state</string>
    <string name="gps_location_active">gps location active</string>
    <string name="network_location_active">network location active</string>
    <string name="location_perm_request">This app needs a location permission</string>
</resources>
