<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/notify_icon_type_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/blinkIconRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notify_icon_type_blink" />

        <RadioButton
            android:id="@+id/buIconRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/notify_icon_type_bu" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/showGpsLocationState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:clickable="false"
        android:text="@string/show_gps_location_state" />

    <CheckBox
        android:id="@+id/showNetworkLocationState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_network_location_state" />

</LinearLayout>
